# Marks

./: .gitignore  CMakeLists.txt  Console_color.h  README.md  log.json  main.cpp  number.cpp  number2.cpp
Doc/: TechnicalTask.txt
Tests/: CMakeLists.txt  test_load_archive_data.cpp
src/: CMakeLists.txt  DBHandler.cpp  DBHandler.h  log.cpp  log.h  logbook.cpp  main.cpp  mark.cpp  screen_util.cpp  tst_demo.cpp
src/include/: DBHandler.h  logbook.h  main.h  mark.h  screen_util.h  tst_demo.h
tst/: CMakeLists.txt  test1.cpp
